[tool.poetry]
name = "compphotos"
version = "0.1.0"
description = ""
authors = ["amaheshwari01 <68670569+amaheshwari01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
